--- a/src/components/PageLayout.css
+++ b/src/components/PageLayout.css
@@ -43,7 +43,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-grow: 1;
 }
 
 /* Performance optimizations */
